# routes/api.php
@@ -10,3 +10,8 @@ Route::get('/user', function (Request $request) {
 
 Route::post('/secret', [SecretController::class, 'addSecret']);
 Route::get('/secret/{hash}', [SecretController::class, 'getSecretByHash']);
+
+Route::get('/secrets', [SecretController::class, 'getPaginatedSecrets']);
+Route::get('/secrets/search', [SecretController::class, 'searchSecrets']);
+Route::get('/secrets/export', [SecretController::class, 'exportSecrets']);
+Route::get('/secrets/{id}/logs', [SecretController::class, 'getAuditLogs']);
